refactor : Component 어노테이션 빈 등록 시 이름 네이밍 규칙 수정